--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/main/resources/static/css/login.css">
-    
+<!--    <link rel="stylesheet" href="/src/main/resources/static/css/login.css">-->
+    <link rel="stylesheet" href="resources/static/css/login.css">
 </head>
 
 <body>
