0126 [modify] css path & add join

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <!--    <link rel="stylesheet" href="/src/main/resources/static/css/login.css">-->
-    <link rel="stylesheet" href="resources/static/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="login__area">
 
             <div class="login__title">
-                <img class="logo" src="/src/main/resources/static/imgs/JSPO-logo.png" alt="logo">
+                <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
 
             </div>
             <div class="input__box">
