--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSPO | 좆소파워 </title>
-    <link rel="stylesheet" href="./css/regForm.css">
+    <link rel="stylesheet" href="css/regForm.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="join__area">
 
             <div class="join__title">
-                <img class="logo" src="./imgs/JSPO-logo.png" alt="logo">
+                <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
                 <span class="title">회원가입</span>
             </div>
             <div class="input__box">
