--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -7,5 +7,13 @@
 <body>
         "안녕하세요"
         "JSPO의 커밋테스트파일입니다"
+        <tr th:object="${memberDto}">
+                id : <td th:text="*{id}"></td>
+                email : <td th:text="*{email}"></td>
+                pwd : <td th:text="*{pwd}"></td>
+                name : <td th:text="*{name}"></td>
+                birth : <td th:text="*{birth}"></td>
+                phone : <td th:text="*{phone}"></td>
+        </tr>
 </body>
 </html>
