0126 [modify] regForm.html & css

--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -16,7 +16,7 @@
 
             <div class="join__title">
                 <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
-                <span class="title">회원가입</span>
+                <span class="title">회원가입3</span>
             </div>
             <div class="input__box">
                 <h3 class="input__title">이름*</h3>
@@ -25,9 +25,7 @@
             <div class="input__box">
                 <h3 class="input__title">이메일*</h3>
                 <div class="email__box">
-                    <input type="text" class="input__txt tp1" id="email">
-                    <span>@</span>
-                    <input type="text" class="input__txt tp1" id="company" placeholder="직접입력">
+                    <input type="text" class="input__txt" id="email">
                 </div>
 
 
@@ -44,12 +42,12 @@
             <div class="input__box">
                 <h3 class="input__title">
                     생년월일*</h3>
-                <input type="text" class="input__txt" id="name" placeholder="생년월일 예)19900101">
+                <input type="text" class="input__txt" id="birth" placeholder="생년월일 예)19900101">
             </div>
 
             <div class="input__box">
                 <h3 class="input__title">연락처*</h3>
-                <input type="text" class="input__txt" id="name" placeholder=" - 없이 숫자만 입력">
+                <input type="text" class="input__txt" id="phone" placeholder=" - 없이 숫자만 입력">
             </div>
             <div class="reg__btn">
                 <button class="reg">가입하기</button>
