--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form action="/join" method="post" name="loginForm" >
+    <form action="/login" method="post" name="loginForm" >
     <div class="wrap">
 
         <div class="login__area">
