--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
+<form action="/join" method="post" name="regForm" >
     <div class="wrap">
 
         <div class="join__area">
 
             <div class="join__title">
                 <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
-                <span class="title">회원가입3</span>
+                <span class="title">회원가입</span>
             </div>
             <div class="input__box">
                 <h3 class="input__title">이름*</h3>
@@ -53,18 +54,9 @@
                 <button class="reg">가입하기</button>
             </div>
 
-
-
-
-
-
-
-
         </div>
-
-
     </div>
-
+</form>
 
 
 </body>
