--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<form action="/join" method="post" name="regForm" >
+<form th:action="@{/join}" method="post" name="regForm" modelAttribute="memberDto">
     <div class="wrap">
 
         <div class="join__area">
@@ -19,37 +19,47 @@
                 <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
                 <span class="title">회원가입</span>
             </div>
+
             <div class="input__box">
                 <h3 class="input__title">이름*</h3>
-                <input type="text" class="input__txt" id="name" autofocus>
+                <input type="text" class="input__txt" id="name" name="name" th:value="${memberDto.name}" autofocus>
+                <span calss="email_ok">사용 가능한 이메일입니다.</span>
+                <span calss="email_already">이미 사용중인 이메일입니다.</span>
+                <span id="valid" th:text="${valid_name}"></span>
             </div>
+
             <div class="input__box">
                 <h3 class="input__title">이메일*</h3>
                 <div class="email__box">
-                    <input type="text" class="input__txt" id="email">
+                    <input type="text" class="input__txt" id="email" name="email" th:value="${memberDto.email}" oninput="checkId()">
+                    <span id="valid" th:text="${valid_email}"></span>
                 </div>
-
-
             </div>
+
             <div class="input__box">
                 <h3 class="input__title">비밀번호*</h3>
-                <input type="password" class="input__txt" id="password" placeholder="영문,숫자,특수문자 조합 8-16자">
+                <input type="password" class="input__txt" id="password" name="pwd" placeholder="영문,숫자,특수문자 조합 8-16자">
+                <span id="valid" th:text="${valid_pwd}"></span>
             </div>
+
             <div class="input__box">
                 <h3 class="input__title">비밀번호 확인*</h3>
-                <input type="password" class="input__txt" id="check__password" placeholder="비밀번호 재입력">
+                <input type="password" class="input__txt" id="check__password" name="pwd2" placeholder="비밀번호 재입력">
             </div>
 
             <div class="input__box">
                 <h3 class="input__title">
                     생년월일*</h3>
-                <input type="text" class="input__txt" id="birth" placeholder="생년월일 예)19900101">
+                <input type="text" class="input__txt" id="birth" name="birth" th:value="${memberDto.birth}" placeholder="생년월일 예)1990-01-01">
+                <span id="valid" th:text="${valid_birth}"></span>
             </div>
 
             <div class="input__box">
                 <h3 class="input__title">연락처*</h3>
-                <input type="text" class="input__txt" id="phone" placeholder=" - 없이 숫자만 입력">
+                <input type="text" class="input__txt" id="phone" name="phone" th:value="${memberDto.phone}" placeholder=" - 없이 숫자만 입력">
+                <span id="valid" th:text="${valid_phone}"></span>
             </div>
+
             <div class="reg__btn">
                 <button class="reg">가입하기</button>
             </div>
@@ -57,8 +67,9 @@
         </div>
     </div>
 </form>
+<script>
 
-
+</script>
 </body>
 
 </html>
