--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,13 +7,14 @@
 <body>
         "안녕하세요"
         "JSPO의 커밋테스트파일입니다"
+        <br>
         <tr th:object="${memberDto}">
-                id : <td th:text="*{id}"></td>
-                email : <td th:text="*{email}"></td>
-                pwd : <td th:text="*{pwd}"></td>
-                name : <td th:text="*{name}"></td>
-                birth : <td th:text="*{birth}"></td>
-                phone : <td th:text="*{phone}"></td>
+                id : <td th:text="*{id}"></td><br>
+                email : <td th:text="*{email}"></td><br>
+                pwd : <td th:text="*{pwd}"></td><br>
+                name : <td th:text="*{name}"></td><br>
+                birth : <td th:text="*{birth}"></td><br>
+                phone : <td th:text="*{phone}"></td><br>
         </tr>
 </body>
 </html>
