0127 [modify] HomeController, MemberMapper [add] LoginController

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,11 +22,11 @@
             </div>
             <div class="input__box">
                 <h3 class="input__title">이메일 주소</h3>
-                <input type="text" class="input__txt" id="name" placeholder="예) jspo@jspo.com" autofocus>
+                <input type="text" class="input__txt" id="email" name="email" placeholder="예) jspo@jspo.com" autofocus>
             </div>
             <div class="input__box">
                 <h3 class="input__title">비밀번호</h3>
-                <input type="password" class="input__txt" id="password">
+                <input type="password" class="input__txt" id="pwd" name="pwd">
             </div>
             <input type="checkbox" name="remember" id="remember"> 아이디 기억하기
             <div class="login__btn">
