0128 [modify] 로그인 구현중

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
             </div>
             <ul class="find">
                 <li class="find__list">
-                    <a href="#">이메일 가입</a>
+                    <a href="/join">이메일 가입</a>
                 </li>
                 <li class="find__list listBorder"> <a href="#">이메일 찾기</a></li>
                 <li class="find__list listBorder"> <a href="#">비밀번호 찾기</a></li>
