--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,27 +1,26 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Header</title>
-    <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-</head>
-<body>
-<div class="container">
-    <div class="top__inner">
-        <ul class="top__list">
-            <li><a href="#">로그인</a></li>
-            <li class="listBorder"><a href="#">회원가입</a></li>
-            <li class="listBorder"><a href="">마이페이지</a></li>
-            <li class="listBorder"><a href="">팀원소개</a></li>
-        </ul>
-    </div>
-    <div class="main__inner">
-        <img class="logo" src="/src/main/resources/static/imgs/JSPO-logo.png" alt="">
-
-    </div>
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+<!--headerFragment 선언-->
+<div th:fragment="headerFragment">
+    <h1>Header Section</h1>
 </div>
-</body>
 </html>
+
+<!--<!doctype html>-->
+
+<!--<th:block th:fragment="headerFragment">-->
+<!--<div class="container">-->
+<!--    <div class="top__inner">-->
+<!--        <ul class="top__list">-->
+<!--            <li><a href="#">로그인</a></li>-->
+<!--            <li class="listBorder"><a href="#">회원가입</a></li>-->
+<!--            <li class="listBorder"><a href="">마이페이지</a></li>-->
+<!--            <li class="listBorder"><a href="">팀원소개</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--    <div class="main__inner">-->
+<!--        <img class="logo" src="/src/main/resources/static/imgs/JSPO-logo.png" alt="">-->
+
+<!--    </div>-->
+<!--</div>-->
+<!--</th:block>-->
+
