0130 [modify] mypage change password

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/myPage.css">
+  <script src="/js/myPage.js" defer></script>
 </head>
 <body>
 <div class="container">
@@ -32,7 +33,7 @@
             <h5 class="title">비밀 번호</h5>
             <p class="desc desc__passworod noneColor">●●●●●●●●</p>
           </div>
-          <button class="changeBtn">변경</button>
+          <button class="changeBtn change_pass_btn">변경</button>
 
         </div>
 
