0131 [add & modfiy] 회원가입시 핸드폰번호 중복확인 및 js 프론트 효과 추가 JoinController, regForm(html, css, js)

--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -65,6 +65,8 @@
                 <input type="text" class="input__txt" id="phone" name="phone" th:value="*{phone}" placeholder=" - 없이 숫자만 입력" oninput="checkPhone()">
                 <input type="text" id="phoneAuthNum" oninput="checkPhoneAuthNum()">
                 <span id="phoneAuthBtn" disabled="disabled" onclick="sendPhoneAuthNum()">인증번호 전송</span>
+                <span id="phone_ok">등록 가능한 번호입니다</span>
+                <span id="phoneDuplicate">이미 등록된 번호입니다</span>
                 <span id="valid_phone" th:text="${valid_phone}"></span>
             </div>
 
