--- a/src/main/resources/static/css/myPage.css
+++ b/src/main/resources/static/css/myPage.css
@@ -116,50 +116,99 @@ h3{
 }
 
 
-.div_change{
-    width: 480px;
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-h5{
-    margin: 13px 0 0;
+.modal .bg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
-.inputbox{
-    height: 37px;
-    border: none;
+.modalBox {
+    position: absolute;
+    background-color: #fff;
+    width: 400px;
+    height: 268px;
+    padding: 15px;
+}
+
+.closeBtn {
+    display: block;
+    width: 40px;
+    margin: 0 auto;
+    position: absolute;
+    top: 5px;
+    right: 0px;
+
+}
+
+.hidden {
+    display: none;
+}
+
+
+.change__pass__title{
+    margin: 0;
+    font-size: 20px;
+    color: black;
+}
+
+.title__margin{
+    margin-top: 10px;
+    font-size: 17px;
+}
+
+.change__input{
+    border: 0;
     border-bottom: 1px solid #9a9998;
-    outline: none;
+    height: 35px;
+    width: 100%;
 
+}
+
+.hint{
+    display: none;
+    font-size: 12px;
+    color: red;
 
 }
 
 
-.btn_div{
+.div__btn {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top : 10px;
+
 }
 
 .btn{
-    width: 103px;
-    height: 42px;
-    border: 1px solid #9a9998;
+    width: 50px;
+    height: 40px;
+    border: 1px solid #ebebeb;
     border-radius: 12px;
+    margin-top: 5px;
 
 
 }
 
 .cancleBtn{
     background-color: white;
-
 }
 
 .applyBtn{
-    background-color: #9a9998;
-    color: white;
-    margin-left: 8px;
+    background-color: #ebebeb;
+    margin-left: 15px;
 }
+
