--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -31,7 +31,7 @@
         <div class="unit__content include_btn">
           <div class="contentBox">
             <h5 class="title">비밀 번호</h5>
-            <p class="desc desc__passworod noneColor" th:text="*{pwd}"></p>
+            <p class="desc desc__passworod noneColor" >😎😎😎😎😎</p>
 
           </div>
           <button class="changeBtn change_pass_btn">변경</button>
@@ -70,6 +70,30 @@
     </div>
 
 
+  </div>
+
+
+
+
+</div>
+<div class="modal hidden">
+  <div class="bg"></div>
+  <div class="modalBox">
+    <div class="title">
+      <h5 class="change__pass__title">비밀번호 변경</h5>
+    </div>
+    <div class="content">
+      <h5 class="change__pass__title title__margin">현재 비밀번호</h5>
+      <input class="change__input currentPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16" minlength="8" required>
+      <span class="hint hint1" hidden="true">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
+      <h5 class="change__pass__title title__margin">새 비밀번호</h5>
+      <input class="change__input newPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16" minlength="8" required>
+      <span class="hint hint2">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
+      <div class="div__btn">
+        <button class="cancleBtn btn">취소</button>
+        <button class="applyBtn btn">확인</button>
+      </div>
+    </div>
   </div>
 
 
