0201 비밀번호 변경 버튼 수정

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -58,7 +58,7 @@
             <h5 class="title">휴대폰 번호</h5>
             <p class="desc desc__phone noneColor" th:text="*{phone}"></p>
           </div>
-          <button class="changeBtn">변경</button>
+          <button class="changeBtn change__phone__title">변경</button>
         </div>
 
 
