--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -1,99 +1,98 @@
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/css/myPage.css">
-  <script src="js/myPage.js" defer></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/myPage.css">
+    <script src="js/myPage.js" defer></script>
 </head>
 <body>
-<div class="container" >
+<div class="container">
 
-  <div class="title__titleLine">
-    <h3>회원 정보</h3>
+    <div class="title__titleLine">
+        <h3>회원 정보</h3>
 
-  </div>
-
-  <div class="profile__info" th:object="${memberDto}">
-    <div class="info__login">
-      <h4 class="info__group__title">로그인 정보</h4>
-      <div class="info__unit">
-        <div class="unit__content">
-          <h5 class="title">이메일 주소</h5>
-          <p class="desc desc__email" th:text="*{email}"></p>
-        </div>
-
-      </div>
-      <div class="info__unit">
-        <div class="unit__content include_btn">
-          <div class="contentBox">
-            <h5 class="title">비밀 번호</h5>
-            <p class="desc desc__passworod noneColor" >😎😎😎😎😎</p>
-
-          </div>
-          <button class="changeBtn change_pass_btn">변경</button>
-
-        </div>
-
-      </div>
     </div>
-    <div class="info__person">
-      <h4 class="info__group__title">개인 정보</h4>
-      <div class="info__unit">
-        <div class="unit__content">
-          <h5 class="title">이름</h5>
-          <p class="desc desc__name noneColor" th:text="*{name}"></p>
+
+    <div class="profile__info" th:object="${memberDto}">
+        <div class="info__login">
+            <h4 class="info__group__title">로그인 정보</h4>
+            <div class="info__unit">
+                <div class="unit__content">
+                    <h5 class="title">이메일 주소</h5>
+                    <p class="desc desc__email" th:text="*{email}"></p>
+                </div>
+
+            </div>
+            <div class="info__unit">
+                <div class="unit__content include_btn">
+                    <div class="contentBox">
+                        <h5 class="title">비밀 번호</h5>
+                        <p class="desc desc__passworod noneColor" th:text="${encPwd}">😎😎😎😎😎</p>
+
+                    </div>
+                    <button class="changeBtn change_pass_btn">변경</button>
+
+                </div>
+
+            </div>
         </div>
+        <div class="info__person">
+            <h4 class="info__group__title">개인 정보</h4>
+            <div class="info__unit">
+                <div class="unit__content">
+                    <h5 class="title">이름</h5>
+                    <p class="desc desc__name noneColor" th:text="*{name}"></p>
+                </div>
 
-        <div class="unit__content">
-          <h5 class="title">생년월일</h5>
-          <p class="desc desc__birth noneColor" th:text="*{birth}"></p>
+                <div class="unit__content">
+                    <h5 class="title">생년월일</h5>
+                    <p class="desc desc__birth noneColor" th:text="*{birth}"></p>
+                </div>
+
+                <div class="unit__content include_btn">
+                    <div class="contentBox">
+                        <h5 class="title">휴대폰 번호</h5>
+                        <p class="desc desc__phone noneColor" th:text="*{phone}"></p>
+                    </div>
+                    <button class="changeBtn change__phone__title">변경</button>
+                </div>
+
+
+            </div>
+
+            <a href="#" class="secession">
+                <button>회원탈퇴</button>
+            </a>
         </div>
-
-        <div class="unit__content include_btn">
-          <div class="contentBox">
-            <h5 class="title">휴대폰 번호</h5>
-            <p class="desc desc__phone noneColor" th:text="*{phone}"></p>
-          </div>
-          <button class="changeBtn change__phone__title">변경</button>
-        </div>
-
-
-      </div>
-
-      <a href="#" class="secession">
-        <button>회원탈퇴</button>
-      </a>
     </div>
-  </div>
-
-
-
 
 
 </div>
 <div class="modal hidden">
-  <div class="bg"></div>
-  <div class="modalBox">
-    <div class="title">
-      <h5 class="change__pass__title">비밀번호 변경</h5>
+    <div class="bg"></div>
+    <div class="modalBox">
+        <div class="title">
+            <h5 class="change__pass__title">비밀번호 변경</h5>
+        </div>
+        <div class="content">
+            <h5 class="change__pass__title title__margin">현재 비밀번호</h5>
+            <input class="change__input currentPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16"
+                   minlength="8" required id="pwd">
+            <span class="hint hint1" hidden="true">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
+            <h5 class="change__pass__title title__margin">새 비밀번호</h5>
+            <input class="change__input newPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16"
+                   minlength="8" required name="chgPwd">
+            <span class="hint hint2">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
+            <div class="div__btn">
+                <button class="cancleBtn btn">취소</button>
+                <button class="applyBtn btn">확인</button>
+            </div>
+        </div>
     </div>
-    <div class="content">
-      <h5 class="change__pass__title title__margin">현재 비밀번호</h5>
-      <input class="change__input currentPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16" minlength="8" required>
-      <span class="hint hint1" hidden="true">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
-      <h5 class="change__pass__title title__margin">새 비밀번호</h5>
-      <input class="change__input newPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16" minlength="8" required>
-      <span class="hint hint2">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
-      <div class="div__btn">
-        <button class="cancleBtn btn">취소</button>
-        <button class="applyBtn btn">확인</button>
-      </div>
-    </div>
-  </div>
 
 
 </div>
