--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,17 +1,24 @@
 *{box-sizing: border-box}
 body{
-    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.footer__container{
+    height: 300px;
+    width: 1920px;
     background-color: black;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    justify-content: space-evenly;
 
-.footer__container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+
+
 }
 .introduce{
     background-color: #4CAF50;
