--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,13 +1,16 @@
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
+    margin: 0;
 }
 
 body {
-
+    width: 100%;
 }
-.container{
+.header__container{
+    width: 1920px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .top__inner {
     text-align: right;
