0202 [add & modify] 타임리프 레이아웃 적용

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -25,9 +25,9 @@
     align-items: center;
     justify-content: center;
 }
-.logo{
-    width: 350px;
-}
+/*.logo{*/
+/*    width: 350px;*/
+/*}*/
 
 .title{
     padding: 0 0 42px;
