--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
-
-
-
-<link rel="stylesheet" href="css/footer.css">
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org">
+    <footer th:fragment="footerFragment">
+        <link rel="stylesheet" href="css/footer.css">
 
         <div class="footer__container">
             <div class="introduce">
@@ -19,4 +19,5 @@
                 </p>
             </div>
         </div>
-
+    </footer>
+</html>
