--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,21 +1,23 @@
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<header th:fragment="headerFragment">
+    <link rel="stylesheet" href="css/header.css">
+    <div class="header__container">
 
-<!--<!doctype html>-->
-<link rel="stylesheet" href="css/header.css">
-<div class="header__container">
+        <div class="main__inner">
+            <a href="/"><img class="logo" src="imgs/JSPO-logo.png" alt=""></a>
 
-    <div class="main__inner">
-        <a href="/"><img class="logo" src="imgs/JSPO-logo.png" alt=""></a>
+        </div>
+        <div class="top__inner">
+            <ul class="top__list">
+                <li><a href="/login">로그인</a></li>
+                <li class="listBorder"><a href="/join">회원가입</a></li>
+                <li class="listBorder"><a href="/my">마이페이지</a></li>
+                <li class="listBorder"><a href="#">팀원소개</a></li>
+            </ul>
+        </div>
 
     </div>
-    <div class="top__inner">
-        <ul class="top__list">
-            <li><a href="/login">로그인</a></li>
-            <li class="listBorder"><a href="/join">회원가입</a></li>
-            <li class="listBorder"><a href="/myPage">마이페이지</a></li>
-            <li class="listBorder"><a href="#">팀원소개</a></li>
-        </ul>
-    </div>
-
-</div>
-
+</header>
+</html>
