--- a/src/main/resources/static/css/regForm.css
+++ b/src/main/resources/static/css/regForm.css
@@ -57,11 +57,37 @@
 
 }
 
-.emailbox{
+.email__box{
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    text-align: right;
+
+
+
+}
+
+.email__box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+
+.auth__box{
+    width: 100%;
+    margin-top: 5px;
+}
+.auth__box__content{
+    margin-top: 5px;
+}
+
+
+.phone__box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
 }
 
 .reg__btn{
@@ -81,67 +107,87 @@
 }
 
 #valid_name{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: inline-block;
 }
 
 #valid_email{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: inline-block;
 }
 
 #valid_pwd{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: inline-block;
 }
 
 #valid_birth{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: inline-block;
 }
 
 #valid_phone{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: inline-block;
 }
 
 .email_ok{
-    font-size: 10px;
+    font-size: 12px;
     color: #4CAF50;
     display: none;
 }
 
 .email_already{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: none;
 }
 
 .pwd_ok{
-    font-size: 10px;
+    font-size: 12px;
     color: #4CAF50;
     display: none;
 }
 
 .pwd_duplicate{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: none;
 }
 
 #phoneDuplicate{
-    font-size: 10px;
+    font-size: 12px;
     color: indianred;
     display: none;
 }
 
 #phone_ok{
-    font-size: 10px;
+    font-size: 12px;
     color: #4CAF50;
     display: none;
+
 }
+
+.auth__input{
+    width: 120px;
+    padding: 9px 0px 8px;
+    border: 0;
+    border-bottom: 1px solid #ebebeb;
+    outline: none;
+    text-align: right;
+    letter-spacing: 10px;
+}
+
+.auth__btn{
+
+    background-color: #ebebeb;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+
