--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -8,37 +8,28 @@
     <link rel="stylesheet" href="/css/myPage.css">
     <script src="js/myPage.js" defer></script>
 
-
     <div class="container">
-
         <div class="title__titleLine">
             <h3>회원 정보</h3>
-
         </div>
-
         <div class="profile__info" th:object="${memberDto}">
             <div class="info__login">
                 <h4 class="info__group__title">로그인 정보</h4>
                 <div class="info__unit">
                     <div class="unit__content">
                         <h5 class="title">이메일 주소</h5>
-                        <p class="desc desc__email" th:text="*{email}"></p>
+                        <p class="desc desc__email noneColor" th:text="*{email}"></p>
                     </div>
-
                 </div>
+
                 <div class="info__unit">
                     <div class="unit__content include_btn">
                         <div class="contentBox">
                             <h5 class="title">비밀 번호</h5>
-
                             <p class="desc desc__passworod noneColor" th:text="${encPwd}">😎😎😎😎😎</p>
-
-
                         </div>
                         <button class="changeBtn change_pass_btn">변경</button>
-
                     </div>
-
                 </div>
             </div>
             <div class="info__person">
@@ -59,20 +50,14 @@
                             <h5 class="title">휴대폰 번호</h5>
                             <p class="desc desc__phone noneColor" th:text="*{phone}"></p>
                         </div>
-                        <button class="changeBtn change__phone__title">변경</button>
+                        <button class="changeBtn change__phone__btn">변경</button>
                     </div>
-
-
                 </div>
-
-                <a href="#" class="secession">
-
+                <a class="secession">
                     <button class="secessionBtn">회원탈퇴</button>
                 </a>
             </div>
         </div>
-
-
     </div>
 
 
@@ -90,7 +75,6 @@
                 <h5 class="change__pass__title title__margin">새 비밀번호</h5>
                 <input class="change__input newPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16"
                        minlength="8" required name="chgPwd">
-
                 <span class="hint hint2">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
                 <div class="div__btn">
                     <button class="cancleBtn btn">취소</button>
@@ -98,35 +82,32 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
 
-
-<div class="phone__modal phone__modal__hidden">
-    <div class="phone__bg">
-    <div class="phone__modalBox">
-        <div class="title">
-            <h5 class="change__phone__title">핸드폰 번호 변경</h5>
-        </div>
-        <div class="content">
-            <h5 class="newPhone__h5">새 핸드폰 번호</h5>
-            <input class="change__input newPhone" type="text" placeholder="- 없이 번호만 입력" required maxlength="11">
-
-            <span class="hint phoneHint">핸드폰 번호를 정확히 입력해주세요.</span>
-            <div class="phone__auth__box">
-            <input class="change__input authPhone" type="text" required placeholder="예)123456" maxlength="6">
-            <button class="phone__authBtn btn">인증번호 전송</button>
-            </div>
-            <div class="div__btn">
-                <button class="phone__cancleBtn btn">취소</button>
-                <button class="phone__applyBtn btn" disabled="disabled">확인</button>
-
+    <div class="phone__modal phone__modal__hidden">
+        <div class="phone__bg">
+            <div class="phone__modalBox">
+                <div class="title">
+                    <h5 class="change__phone__title">핸드폰 번호 변경</h5>
+                </div>
+                <div class="content">
+                    <h5 class="newPhone__h5">새 핸드폰 번호</h5>
+                    <input class="change__input newPhone" type="text" placeholder="- 없이 번호만 입력" required maxlength="11">
+                    <span class="hint phoneHint">핸드폰 번호를 정확히 입력해주세요.</span>
+                    <div class="phone__auth__box">
+                        <input class="change__input authPhone" type="text" required placeholder="예)123456"
+                               maxlength="6">
+                        <button class="phone__authBtn btn">인증번호 전송</button>
+                    </div>
+                    <div class="div__btn">
+                        <button class="phone__cancleBtn btn">취소</button>
+                        <button class="phone__applyBtn btn" disabled="disabled">확인</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 
     <div class="secession__modal secession__modal__hidden">
         <div class="secession__bg">
