--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -10,9 +10,7 @@
     <script src="js/regForm.js" defer></script>
     <form th:action="@{/join}" method="post" name="regForm" th:object="${memberDto}"><!--modelAttribute="memberDto"-->
         <div class="wrap">
-
             <div class="join__area">
-
                 <div class="join__title">
                     <img class="logo" src="imgs/JSPO-logo.png" alt="logo">
                     <span class="title">회원가입</span>
@@ -30,30 +28,23 @@
                     <div class="email__box">
                         <input type="text" class="input__txt" id="email" name="email" th:value="*{email}"
                                oninput="checkEmail()">
-                        <input type="text" id="authNum" oninput="checkAuthNum()">
-                        <span id="authBtn" disabled="disabled" onclick="sendAuthNum()">인증번호 전송</span>
-                        <span class="email_ok">사용 가능한 이메일입니다.</span>
-                        <span class="email_already">이미 사용중인 이메일입니다.</span>
-                        <span id="valid_email" th:text="${valid_email}"></span>
+                        <div class="auth__box__content">
+                            <span class="email_ok auth__hint">사용 가능한 이메일입니다.</span>
+                            <span class="email_already auth__hint">이미 사용중인 이메일입니다.</span>
+                            <span id="valid_email" th:text="${valid_email}"></span>
+                            <input type="text" class="auth__input" id="authNum" oninput="checkAuthNum()">
+                            <span id="authBtn" class="auth__btn" disabled="disabled"
+                                  onclick="sendAuthNum()">인증번호 전송</span>
+                        </div>
                     </div>
                 </div>
 
-            <div class="input__box">
-                <h3 class="input__title">이메일*</h3>
-                <div class="email__box">
-                    <input type="text" class="input__txt" id="email" name="email" th:value="*{email}" oninput="checkEmail()">
-                    <div class="auth__box__content">
-                        <span class="email_ok auth__hint">사용 가능한 이메일입니다.</span>
 
-                        <span class="email_already auth__hint">이미 사용중인 이메일입니다.</span>
-                        <span id="valid_email" th:text="${valid_email}"></span>
-
-                    <input type="text" class="auth__input" id="authNum" oninput="checkAuthNum()">
-
-                    <span id="authBtn" class="auth__btn" disabled="disabled" onclick="sendAuthNum()">인증번호 전송</span>
-                    </div>
-
-
+                <div class="input__box">
+                    <h3 class="input__title">비밀번호*</h3>
+                    <input type="password" class="input__txt" id="password" name="pwd" placeholder="영문,숫자,특수문자 조합 8-16자"
+                           oninput="checkPwd()">
+                    <span id="valid_pwd" th:text="${valid_pwd}"></span>
                 </div>
 
 
@@ -75,38 +66,24 @@
 
                 <div class="input__box">
                     <h3 class="input__title">연락처*</h3>
-                    <input type="text" class="input__txt" id="phone" name="phone" th:value="*{phone}"
-                           placeholder=" - 없이 숫자만 입력" oninput="checkPhone()">
-                    <input type="text" id="phoneAuthNum" oninput="checkPhoneAuthNum()">
-                    <span id="phoneAuthBtn" disabled="disabled" onclick="sendPhoneAuthNum()">인증번호 전송</span>
-                    <span id="phone_ok">등록 가능한 번호입니다</span>
-                    <span id="phoneDuplicate">이미 등록된 번호입니다</span>
-                    <span id="valid_phone" th:text="${valid_phone}"></span>
+                    <div class="phone__box">
+                        <input type="text" class="input__txt" id="phone" name="phone" th:value="*{phone}"
+                               placeholder=" - 없이 숫자만 입력" oninput="checkPhone()" maxlength="11" minlength="11">
+                        <div class="auth__box">
+                            <span class="auth__hint" id="phone_ok">등록 가능한 번호입니다</span>
+                            <span class="auth__hint" id="phoneDuplicate">이미 등록된 번호입니다</span>
+                            <span class="auth__hint" id="valid_phone" th:text="${valid_phone}"></span>
+                            <input type="text" class="auth__input" id="phoneAuthNum" oninput="checkPhoneAuthNum()"
+                                   maxlength="6">
+                            <span id="phoneAuthBtn" class="auth__btn" disabled="disabled"
+                                  onclick="sendPhoneAuthNum()">인증번호 전송</span>
+                        </div>
+                    </div>
                 </div>
-
                 <div class="reg__btn">
                     <button type="submit" class="reg" disabled="disabled">가입하기</button>
                 </div>
-
-
-            <div class="input__box">
-                <h3 class="input__title">연락처*</h3>
-                <div class="phone__box">
-                <input type="text" class="input__txt" id="phone" name="phone" th:value="*{phone}" placeholder=" - 없이 숫자만 입력" oninput="checkPhone()" maxlength="11" minlength="11">
-                <div class="auth__box">
-                    <span class="auth__hint" id="phone_ok">등록 가능한 번호입니다</span>
-                    <span class="auth__hint" id="phoneDuplicate">이미 등록된 번호입니다</span>
-                    <span class="auth__hint" id="valid_phone" th:text="${valid_phone}"></span>
-                    <input type="text" class="auth__input" id="phoneAuthNum" oninput="checkPhoneAuthNum()" maxlength="6">
-                    <span id="phoneAuthBtn" class="auth__btn" disabled="disabled" onclick="sendPhoneAuthNum()">인증번호 전송</span>
-
-                </div>
-                </div>
-            <div class="reg__btn">
-                <button type="submit" class="reg" disabled="disabled">가입하기</button>
             </div>
-
-
         </div>
     </form>
 </div>
