--- a/src/main/resources/templates/HotelReg.html
+++ b/src/main/resources/templates/HotelReg.html
@@ -9,7 +9,7 @@
 <header>
     <h1> 호텔 등록게시판</h1>
 </header>
-<form role="form" method="post" action="/hotel/reg">
+<form role="form" method="post" action="/hotel/reg" enctype="multipart/form-data">
     <table>
         <tbody>
 
@@ -17,9 +17,22 @@
             <td>
                 <label>호텔명</label><input type="text" name="htName"  /><br>
                 <label>호텔주소</label><input type="text" name="htAddress" /><br>
-                <label>호텔이미지</label><input type="file" id=htImg name="htImg"  /><br>
+                <label>호텔이미지</label><input type="file" id=htImg name="file"/><br>
                 <div class="select_img"><img src="" /></div>
                 <label>호텔 전화번호</label><input type="text" name="htPhone"  /><br>
+
+                <script>
+                    $("#htImg").change(function(){
+                        if(this.files && this.files[0]) {
+                            var reader = new FileReader;
+                            reader.onload = function(data) {
+                                $(".select_img img").attr("src", data.target.result).width(500);
+                            }
+                            reader.readAsDataURL(this.files[0]);
+                        }
+                    });
+
+                </script>
             </td>
         <tr>
             <td>
@@ -31,18 +44,7 @@
 </form>
 
 
-<script>
-    $("#htImg").change(function(){
-        if(this.files && this.files[0]) {
-            var reader = new FileReader;
-            reader.onload = function(data) {
-                $(".select_img img").attr("src", data.target.result).width(500);
-            }
-            reader.readAsDataURL(this.files[0]);
-        }
-    });
 
-</script>
 
 </body>
 </html>
