0203 부트스트랩 사용 디자인 다시

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -23,7 +23,9 @@
 <body>
 
 <div id="headers"></div>
-<div class="mainPage__container">        <h1>메인 페이지</h1></div>
+<div class="mainPage__container">        <h1>메인 페이지</h1>
+    <a href="/hotel">호텔페이지 링크</a></div>
+
 <div id="footers"></div>
 </body>
 </html>
