0205 [modify] 호텔의 id를 받아와 객실게시판 연동완료

--- a/src/main/resources/templates/HotelList.html
+++ b/src/main/resources/templates/HotelList.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>호텔 리스트</title>
     <style>
         .oriImg { width: 500px; height: auto;}
+        td{ text-align: center;}
     </style>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <tr><th>사진</th><th>호텔이름</th><th>주소</th></tr>
 
         <tr th:each="list : ${list}">
+
             <td>
             <img th:src="${list.htImg}" class="oriImg">
             </td>
